--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,9 +33,16 @@
         android:id="@+id/btn_getfriends" />
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:id="@+id/imageView1"
-        android:layout_marginTop="70dp"
-        android:layout_weight="0.00" />
+        android:layout_marginTop="50dp"
+        android:layout_weight="0.00"
+        />
+
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/next_activity" />
 
 </LinearLayout>
