--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/next_activity" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/map"
+        android:text="search places"/>
 
 </LinearLayout>
