--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         />
 
     <Button
-        android:text="Button"
+        android:text="Show Reviews"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/next_activity" />
