--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,52 +2,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
-
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
+    android:weightSum="1"
+    android:background="#FFFFFF">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Welcome!"
+        android:id="@+id/greetings"
+        android:layout_gravity="top"
+        android:layout_weight="0.04"
+        android:paddingTop="5dp"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_weight="0.00" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/greetings"
-        android:layout_gravity="center_horizontal" />
 
-    <Button
+    <!--<Button
         android:text="get friends"
         android:layout_width="186dp"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_getfriends" />
+        android:id="@+id/btn_getfriends"
+        android:background="@color/mydarkcolor"
+        android:textColor="#FFFFFF" />-->
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:id="@+id/imageView1"
         android:layout_marginTop="50dp"
         android:layout_weight="0.00"
         />
 
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="30dp" />
+
     <Button
         android:text="Show Reviews"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/next_activity" />
+        android:id="@+id/next_activity"
+        android:elevation="6dp"
+        android:background="@color/mydarkcolor"
+        android:textColor="#FFFFFF" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/map"
-        android:text="search places"/>
+        android:text="search places"
+        android:layout_marginTop="10dp"
+        android:background="@color/mydarkcolor"
+        android:textColor="#FFFFFF"
+        android:padding="5dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/form"
+            android:text="Provide review"
+            android:layout_marginTop="10dp"
+            android:background="@color/mydarkcolor"
+            android:textColor="#FFFFFF"
+            android:padding="5dp"/>
+    </LinearLayout>
+</ScrollView>
 
 </LinearLayout>
