--- a/app/src/main/res/layout/activity_placedetails.xml
+++ b/app/src/main/res/layout/activity_placedetails.xml
@@ -3,14 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
 
-    <RelativeLayout
-        android:id="@+id/form_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
 
     <TextView
         android:text="Places to visit:"
@@ -118,7 +111,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-        <TextView
+      <!--  <TextView
             android:text="How to get by:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -143,9 +136,8 @@
             android:layout_alignLeft="@+id/textView6"
             android:layout_alignStart="@+id/textView6"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true" />-->
 
-        </RelativeLayout>
-    </ScrollView>
+
 
 </RelativeLayout>
